--- a/styles.css
+++ b/styles.css
@@ -81,13 +81,22 @@ table{
 tr:hover{
     background-color: #414242;
 }
-td{
-    padding: 10px;
+
+.idCell{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
+.playPauseBtn{
+    margin-left: 25%;
+    color: #1DB954;
+    cursor: pointer;
 }
 
 .musicPlayer{
     width: 60px;
-    margin: 20px;
+    margin: 10px;
     position: relative;
 }
 .trackArt{
@@ -95,21 +104,6 @@ td{
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 0;
-}
-.playPauseBtn{
-    padding: 10px;
-    margin: 0 auto;
-    z-index: 10;
-    margin: 0 auto;
-    position: sticky;
-    margin-left: 25%;
-    opacity: 0;
-    color: #1DB954;
-    cursor: pointer;
-}
-.playPauseBtn:hover{
-    opacity: 1;
 }
 
 .trackInfo{
@@ -181,10 +175,12 @@ footer{
     #textInput{
         margin-bottom: 5px;
     }
-    td{
-        padding: 2px;
-    }
+    
     .trackInfo{
         margin-left: 10px;
     }
+    .trackId{
+        display: none;
+    }
+
 }
