--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ a:hover{
 }
 
 .accordion-body{
-    width: 50%;
+    width: 70%;
     margin: 0 auto;
     padding-bottom: 60px;
     text-align: center;
@@ -144,12 +144,12 @@ a:hover{
 .acc-content{
     position: relative;
     height: 0;
-    padding-left: 20px;
+    padding-left: 30px;
     overflow: hidden;
     line-height: 25px;
     transition: 0.5s;
 }
-.acc-active > .acc-content{
+.acc-active .acc-content{
     height: 100px;
 }
 
@@ -200,6 +200,12 @@ footer{
 
 }
 
+@media (max-width: 1080px){
+    .acc-active .acc-content{
+        height: 150px;
+    }
+}
+
 @media (max-width: 600px) {      
     .content{
         width: 95%; 
@@ -216,4 +222,11 @@ footer{
         display: none;
     }
 
+    .acc-content{
+        font-size: 12px;
+    }
+    .acc-active .acc-content{
+        height: 100px;
+        overflow: scroll;
+    }
 }
